[package]
name = "filament-bindings"
version = "0.1.0"
edition = "2021"
exclude = ["/filament", "/examples"]

[lib]
doctest = false

[build-dependencies]
bindgen = "0.59"
serde_json = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
ureq = "2.4"
num_cpus = "1.0"
regex = "1.5"
